--- a/AlgorithmsMergeSortNotes.ipynb
+++ b/AlgorithmsMergeSortNotes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhEZ3nK4gmfj99G4aLJxZR",
+      "authorship_tag": "ABX9TyMvhAAU1aK7jRy2xwXOoqbM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,40 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "* We will go over the MergeSort algorithm.  \n",
+        "* We will learn how to use python list append and extend methods for list objects.\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "ql6SX0i4nZqq"
+        "id": "kKImiYixycLT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "ql6SX0i4nZqq",
+        "outputId": "b20e00ac-fbca-4d11-84bf-8ea23560de90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ],
+      "source": [
+        "alist = [3, 5, 7]\n",
+        "print(alist[0])"
+      ]
     }
   ]
 }
